mise en place de la section titre

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <p>
+            <section>Titre: Etudiant<br/></section>  
+
+        </p>
+
+    </div>
     
 </body>
 </html>
