mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <section>
+            Courtes description: j'ai étudie à Esgis
+        </section>
+
+    </div>
+
+
 </body>
 </html>
