mise en place de la section formation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <section>
+            Formation: Informtique/Génie logicielle
+        </section>
+    </div>
     
 </body>
 </html>
