mise en place de la section competences

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <section>
+            Competences: Developpment en web,creation d'application
+        </section>
+    </div>    
 </body>
 </html>
