mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <section>
+            Association: Aucun
+        </section>
+    </div>
 </body>
 </html>
