--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <td>FAGBEMY AGBANRIN</td>
                 <td>Mounirou Wilson</td>
                 <td><a href="#">fagbemymounirou@gmail.com</a></td>
-                <td><input type="tel">51797129</td
+                <td><input type="tel">51797129</td>
               </tr>
            </tbody>
          </table>
