--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
         <table class="table">
             <thead>
          <tr>
-                <th scope="col">#</th>
-                <th scope="col">Nom</th>
-                <th scope="col">Prénom</th>
-                <th scope="col">Email</th>
-                <th scope="col">Numero telephone</th>
-      
+             <li>
+                <ol><th scope="col">#</th></ol>
+                <ol><th scope="col">Nom</th></ol>
+                <ol><th scope="col">Prénom</th></ol>
+                <ol><th scope="col">Email</th></ol>
+                <ol><th scope="col">Numero telephone</th></ol>
+             </li>
               </tr>
             </thead>
             <tbody>
