--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <table class="table">
             <thead>
          <tr>
-             <li>
-                <ol><th scope="col">#</th></ol>
-                <ol><th scope="col">Nom</th></ol>
-                <ol><th scope="col">Prénom</th></ol>
-                <ol><th scope="col">Email</th></ol>
-                <ol><th scope="col">Numero telephone</th></ol>
-             </li>
+             <ul>
+                <li><th scope="col">#</th></li>
+                <li><th scope="col">Nom</th></li>
+                <li><th scope="col">Prénom</th></li>
+                <li><th scope="col">Email</th></li>
+                <li><th scope="col">Numero telephone</th></li>
+             </ul>
               </tr>
             </thead>
             <tbody>
