--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td>FAGBEMY AGBANRIN</td>
-                <td>Mounirou Wilson</td>
-                <td><a href="#">fagbemymounirou@gmail.com</a></td>
-                <td><input type="51797129" ></td>
+                   <ul>
+                       <li><th scope="row">1</th></li>
+                       <li><td>FAGBEMY AGBANRIN</td></li>
+                       <li><td>Mounirou Wilson</td></li>
+                       <li><td><a href="#">fagbemymounirou@gmail.com</a></td></li>
+                       <li><td>51797129</td></li>
+                    </ul> 
               </tr>
            </tbody>
          </table>
