--- a/index.html
+++ b/index.html
@@ -26,31 +26,25 @@
 
    
     </div>
-        <section>
-        <table class="table">
+       
             <thead>
          <tr>
              <ul>
-                <li><th scope="col">#</th></li>
-                <li><th scope="col">Nom</th></li>
-                <li><th scope="col">Prénom</th></li>
-                <li><th scope="col">Email</th></li>
-                <li><th scope="col">Numero telephone</th></li>
-             </ul>
+                <th scope="col">#</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Prénom</th>
+                <th scope="col">Email</th>
+                <th scope="col">Numero telephone</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                   <ul>
-                       <li><th scope="row">1</th></li>
-                       <li><td>FAGBEMY AGBANRIN</td></li>
-                       <li><td>Mounirou Wilson</td></li>
-                       <li><td><a href="#">fagbemymounirou@gmail.com</a></td></li>
-                       <li><td>51797129</td></li>
-                    </ul> 
+              <tr> 
+                  <th scope="row">1</th>
+                  <td>FAGBEMY </td>
+                  <td>Mounirou Wilson</td>
+                  <td><a href="#">fagbemymounirou@gmail.com</a></td>
+                  <td>51797129</td>
               </tr>
            </tbody>
-         </table>
-    </section>
 </body>
 </html>
