--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         </section>
          <h1>Trombinoscope L2 GROUPE 3 2022</h1>
 
+    <section>
+        <table class="table">
    
-    </div>
-       
+        <section>
+        <table class="table">
             <thead>
          <tr>
                 <th scope="col">#</th>
@@ -45,5 +47,9 @@
                   <td>51797129</td>
               </tr>
            </tbody>
+        </table>
+    </section>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+     </div>
 </html>
